--- a/static/style.css
+++ b/static/style.css
@@ -861,7 +861,7 @@ body {
 
 .menu-items {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     gap: 2.5rem;
     padding: 0 1rem;
     margin-bottom: 2rem;
